--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+    body {
+        background-image: url('static/snaplogo2.png');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+        align-items: center;
+    }
+</style>
+<title>Coverage Report</title>
+</head>
+<body>
+
+<h1 style="color: gainsboro;">Links to Coverage Reports</h1>
+<h3>
+    <a style="color: gainsboro;" href="https://7552-snapmsg-grupo5.github.io/users-backend-coverage/">Users Backend Coverage</a>
+</h3>
+
+</body>
+</html>
