--- a/users-backend-coverage/index.html
+++ b/users-backend-coverage/index.html
@@ -11,7 +11,7 @@
 <header>
     <div class="content">
         <h1>Users Backend Code Coverage:
-            <span class="pc_cov">90%</span>
+            <span class="pc_cov">88%</span>
         </h1>
         <aside id="help_panel_wrapper">
             <input id="help_panel_state" type="checkbox">
@@ -45,7 +45,7 @@
         </form>
         <p class="text">
             <a class="nav" href="https://coverage.readthedocs.io/en/7.3.2">coverage.py v7.3.2</a>,
-            created at 2023-10-18 05:51 +0000
+            created at 2023-10-19 00:10 +0000
         </p>
     </div>
 </header>
@@ -119,10 +119,10 @@
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_e634d7a1dd90e049_users_py.html">models/users.py</a></td>
-                <td>18</td>
+                <td>21</td>
                 <td>2</td>
                 <td>0</td>
-                <td class="right" data-ratio="16 18">89%</td>
+                <td class="right" data-ratio="19 21">90%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_f35dcf436292fe87___init___py.html">repositories/__init__.py</a></td>
@@ -137,6 +137,13 @@
                 <td>12</td>
                 <td>0</td>
                 <td class="right" data-ratio="38 50">76%</td>
+            </tr>
+            <tr class="file">
+                <td class="name left"><a href="d_f35dcf436292fe87_user_follow_repository_py.html">repositories/user_follow_repository.py</a></td>
+                <td>77</td>
+                <td>32</td>
+                <td>0</td>
+                <td class="right" data-ratio="45 77">58%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_f35dcf436292fe87_user_interests_repository_py.html">repositories/user_interests_repository.py</a></td>
@@ -175,10 +182,10 @@
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_63e5b5a4137cfa77_data_structs_py.html">service/data_structs.py</a></td>
-                <td>29</td>
+                <td>38</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="29 29">100%</td>
+                <td class="right" data-ratio="38 38">100%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_63e5b5a4137cfa77_interests_validator_py.html">service/interests_validator.py</a></td>
@@ -207,6 +214,13 @@
                 <td>5</td>
                 <td>0</td>
                 <td class="right" data-ratio="28 33">85%</td>
+            </tr>
+            <tr class="file">
+                <td class="name left"><a href="d_63e5b5a4137cfa77_users_follow_service_py.html">service/users_follow_service.py</a></td>
+                <td>43</td>
+                <td>18</td>
+                <td>0</td>
+                <td class="right" data-ratio="25 43">58%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_63e5b5a4137cfa77_users_service_py.html">service/users_service.py</a></td>
@@ -279,6 +293,13 @@
                 <td class="right" data-ratio="38 39">97%</td>
             </tr>
             <tr class="file">
+                <td class="name left"><a href="d_a44f0ac069e85531_test_user_follow_repository_py.html">tests/test_user_follow_repository.py</a></td>
+                <td>54</td>
+                <td>1</td>
+                <td>0</td>
+                <td class="right" data-ratio="53 54">98%</td>
+            </tr>
+            <tr class="file">
                 <td class="name left"><a href="d_a44f0ac069e85531_test_user_interests_repository_py.html">tests/test_user_interests_repository.py</a></td>
                 <td>57</td>
                 <td>1</td>
@@ -300,6 +321,13 @@
                 <td class="right" data-ratio="63 64">98%</td>
             </tr>
             <tr class="file">
+                <td class="name left"><a href="d_a44f0ac069e85531_test_users_follow_service_py.html">tests/test_users_follow_service.py</a></td>
+                <td>55</td>
+                <td>1</td>
+                <td>0</td>
+                <td class="right" data-ratio="54 55">98%</td>
+            </tr>
+            <tr class="file">
                 <td class="name left"><a href="d_a44f0ac069e85531_test_users_service_py.html">tests/test_users_service.py</a></td>
                 <td>73</td>
                 <td>1</td>
@@ -317,10 +345,10 @@
         <tfoot>
             <tr class="total">
                 <td class="name left">Total</td>
-                <td>1135</td>
-                <td>119</td>
+                <td>1376</td>
+                <td>171</td>
                 <td>0</td>
-                <td class="right" data-ratio="1016 1135">90%</td>
+                <td class="right" data-ratio="1205 1376">88%</td>
             </tr>
         </tfoot>
     </table>
@@ -332,7 +360,7 @@
     <div class="content">
         <p>
             <a class="nav" href="https://coverage.readthedocs.io/en/7.3.2">coverage.py v7.3.2</a>,
-            created at 2023-10-18 05:51 +0000
+            created at 2023-10-19 00:10 +0000
         </p>
     </div>
     <aside class="hidden">
