--- a/users-backend-coverage/index.html
+++ b/users-backend-coverage/index.html
@@ -11,7 +11,7 @@
 <header>
     <div class="content">
         <h1>Users Backend Code Coverage:
-            <span class="pc_cov">88%</span>
+            <span class="pc_cov">89%</span>
         </h1>
         <aside id="help_panel_wrapper">
             <input id="help_panel_state" type="checkbox">
@@ -45,7 +45,7 @@
         </form>
         <p class="text">
             <a class="nav" href="https://coverage.readthedocs.io/en/7.3.2">coverage.py v7.3.2</a>,
-            created at 2023-11-21 00:26 +0000
+            created at 2023-11-21 05:27 +0000
         </p>
     </div>
 </header>
@@ -119,10 +119,10 @@
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_e634d7a1dd90e049_users_py.html">models/users.py</a></td>
-                <td>24</td>
+                <td>25</td>
                 <td>2</td>
                 <td>0</td>
-                <td class="right" data-ratio="22 24">92%</td>
+                <td class="right" data-ratio="23 25">92%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_f35dcf436292fe87___init___py.html">repositories/__init__.py</a></td>
@@ -182,10 +182,17 @@
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_63e5b5a4137cfa77_data_structs_py.html">service/data_structs.py</a></td>
-                <td>44</td>
+                <td>57</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="44 44">100%</td>
+                <td class="right" data-ratio="57 57">100%</td>
+            </tr>
+            <tr class="file">
+                <td class="name left"><a href="d_63e5b5a4137cfa77_datadog_publisher_py.html">service/datadog_publisher.py</a></td>
+                <td>25</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="25 25">100%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_63e5b5a4137cfa77_interests_validator_py.html">service/interests_validator.py</a></td>
@@ -231,10 +238,10 @@
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_63e5b5a4137cfa77_users_validator_py.html">service/users_validator.py</a></td>
-                <td>52</td>
-                <td>16</td>
+                <td>59</td>
+                <td>18</td>
                 <td>0</td>
-                <td class="right" data-ratio="36 52">69%</td>
+                <td class="right" data-ratio="41 59">69%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_63e5b5a4137cfa77_utils_py.html">service/utils.py</a></td>
@@ -270,6 +277,13 @@
                 <td>1</td>
                 <td>0</td>
                 <td class="right" data-ratio="45 46">98%</td>
+            </tr>
+            <tr class="file">
+                <td class="name left"><a href="d_a44f0ac069e85531_test_datadog_publisher_py.html">tests/test_datadog_publisher.py</a></td>
+                <td>11</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="11 11">100%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_a44f0ac069e85531_test_interests_validator_py.html">tests/test_interests_validator.py</a></td>
@@ -345,10 +359,10 @@
         <tfoot>
             <tr class="total">
                 <td class="name left">Total</td>
-                <td>1545</td>
-                <td>182</td>
+                <td>1602</td>
+                <td>184</td>
                 <td>0</td>
-                <td class="right" data-ratio="1363 1545">88%</td>
+                <td class="right" data-ratio="1418 1602">89%</td>
             </tr>
         </tfoot>
     </table>
@@ -360,7 +374,7 @@
     <div class="content">
         <p>
             <a class="nav" href="https://coverage.readthedocs.io/en/7.3.2">coverage.py v7.3.2</a>,
-            created at 2023-11-21 00:26 +0000
+            created at 2023-11-21 05:27 +0000
         </p>
     </div>
     <aside class="hidden">
