Updated coverage snaps

--- a/snaps-backend-coverage/index.html
+++ b/snaps-backend-coverage/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Snaps Backend Code Coverage
-</title>
+    <title>Snaps Backend Code Coverage</title>
     <link rel="icon" sizes="32x32" href="favicon_32.png">
     <link rel="stylesheet" href="style.css" type="text/css">
     <script type="text/javascript" src="coverage_html.js" defer></script>
@@ -11,8 +10,7 @@
 <body class="indexfile">
 <header>
     <div class="content">
-        <h1>Snaps Backend Code Coverage
-:
+        <h1>Snaps Backend Code Coverage:
             <span class="pc_cov">99%</span>
         </h1>
         <aside id="help_panel_wrapper">
@@ -47,7 +45,7 @@
         </form>
         <p class="text">
             <a class="nav" href="https://coverage.readthedocs.io/en/7.3.2">coverage.py v7.3.2</a>,
-            created at 2023-11-05 03:18 +0000
+            created at 2023-11-23 03:22 +0000
         </p>
     </div>
 </header>
@@ -72,10 +70,17 @@
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_63e5b5a4137cfa77_data_structs_py.html">service/data_structs.py</a></td>
-                <td>38</td>
+                <td>61</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="38 38">100%</td>
+                <td class="right" data-ratio="61 61">100%</td>
+            </tr>
+            <tr class="file">
+                <td class="name left"><a href="d_63e5b5a4137cfa77_datadog_publisher_py.html">service/datadog_publisher.py</a></td>
+                <td>25</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="25 25">100%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_63e5b5a4137cfa77_jwt_handler_py.html">service/jwt_handler.py</a></td>
@@ -92,6 +97,13 @@
                 <td class="right" data-ratio="0 0">100%</td>
             </tr>
             <tr class="file">
+                <td class="name left"><a href="d_a44f0ac069e85531_test_datadog_publisher_py.html">tests/test_datadog_publisher.py</a></td>
+                <td>11</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="11 11">100%</td>
+            </tr>
+            <tr class="file">
                 <td class="name left"><a href="d_a44f0ac069e85531_test_jwt_handler_py.html">tests/test_jwt_handler.py</a></td>
                 <td>28</td>
                 <td>1</td>
@@ -102,10 +114,10 @@
         <tfoot>
             <tr class="total">
                 <td class="name left">Total</td>
-                <td>72</td>
+                <td>131</td>
                 <td>1</td>
                 <td>0</td>
-                <td class="right" data-ratio="71 72">99%</td>
+                <td class="right" data-ratio="130 131">99%</td>
             </tr>
         </tfoot>
     </table>
@@ -117,7 +129,7 @@
     <div class="content">
         <p>
             <a class="nav" href="https://coverage.readthedocs.io/en/7.3.2">coverage.py v7.3.2</a>,
-            created at 2023-11-05 03:18 +0000
+            created at 2023-11-23 03:22 +0000
         </p>
     </div>
     <aside class="hidden">
