--- a/users-backend-coverage/index.html
+++ b/users-backend-coverage/index.html
@@ -45,7 +45,7 @@
         </form>
         <p class="text">
             <a class="nav" href="https://coverage.readthedocs.io/en/7.3.2">coverage.py v7.3.2</a>,
-            created at 2023-11-21 05:27 +0000
+            created at 2023-11-27 02:28 +0000
         </p>
     </div>
 </header>
@@ -84,10 +84,10 @@
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_e634d7a1dd90e049___init___py.html">models/__init__.py</a></td>
-                <td>4</td>
+                <td>5</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="4 4">100%</td>
+                <td class="right" data-ratio="5 5">100%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_e634d7a1dd90e049_admins_py.html">models/admins.py</a></td>
@@ -119,10 +119,17 @@
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_e634d7a1dd90e049_users_py.html">models/users.py</a></td>
-                <td>25</td>
+                <td>26</td>
                 <td>2</td>
                 <td>0</td>
-                <td class="right" data-ratio="23 25">92%</td>
+                <td class="right" data-ratio="24 26">92%</td>
+            </tr>
+            <tr class="file">
+                <td class="name left"><a href="d_e634d7a1dd90e049_verifications_py.html">models/verifications.py</a></td>
+                <td>15</td>
+                <td>2</td>
+                <td>0</td>
+                <td class="right" data-ratio="13 15">87%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_f35dcf436292fe87___init___py.html">repositories/__init__.py</a></td>
@@ -160,6 +167,13 @@
                 <td class="right" data-ratio="67 90">74%</td>
             </tr>
             <tr class="file">
+                <td class="name left"><a href="d_f35dcf436292fe87_verifications_repository_py.html">repositories/verifications_repository.py</a></td>
+                <td>61</td>
+                <td>11</td>
+                <td>0</td>
+                <td class="right" data-ratio="50 61">82%</td>
+            </tr>
+            <tr class="file">
                 <td class="name left"><a href="d_63e5b5a4137cfa77___init___py.html">service/__init__.py</a></td>
                 <td>0</td>
                 <td>0</td>
@@ -182,10 +196,10 @@
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_63e5b5a4137cfa77_data_structs_py.html">service/data_structs.py</a></td>
-                <td>57</td>
+                <td>70</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="57 57">100%</td>
+                <td class="right" data-ratio="70 70">100%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_63e5b5a4137cfa77_datadog_publisher_py.html">service/datadog_publisher.py</a></td>
@@ -249,6 +263,13 @@
                 <td>1</td>
                 <td>0</td>
                 <td class="right" data-ratio="4 5">80%</td>
+            </tr>
+            <tr class="file">
+                <td class="name left"><a href="d_63e5b5a4137cfa77_verifications_service_py.html">service/verifications_service.py</a></td>
+                <td>39</td>
+                <td>5</td>
+                <td>0</td>
+                <td class="right" data-ratio="34 39">87%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_a44f0ac069e85531___init___py.html">tests/__init__.py</a></td>
@@ -355,14 +376,28 @@
                 <td>0</td>
                 <td class="right" data-ratio="73 74">99%</td>
             </tr>
+            <tr class="file">
+                <td class="name left"><a href="d_a44f0ac069e85531_test_verifications_repository_py.html">tests/test_verifications_repository.py</a></td>
+                <td>63</td>
+                <td>1</td>
+                <td>0</td>
+                <td class="right" data-ratio="62 63">98%</td>
+            </tr>
+            <tr class="file">
+                <td class="name left"><a href="d_a44f0ac069e85531_test_verifications_service_py.html">tests/test_verifications_service.py</a></td>
+                <td>63</td>
+                <td>1</td>
+                <td>0</td>
+                <td class="right" data-ratio="62 63">98%</td>
+            </tr>
         </tbody>
         <tfoot>
             <tr class="total">
                 <td class="name left">Total</td>
-                <td>1602</td>
-                <td>184</td>
+                <td>1858</td>
+                <td>204</td>
                 <td>0</td>
-                <td class="right" data-ratio="1418 1602">89%</td>
+                <td class="right" data-ratio="1654 1858">89%</td>
             </tr>
         </tfoot>
     </table>
@@ -374,11 +409,11 @@
     <div class="content">
         <p>
             <a class="nav" href="https://coverage.readthedocs.io/en/7.3.2">coverage.py v7.3.2</a>,
-            created at 2023-11-21 05:27 +0000
+            created at 2023-11-27 02:28 +0000
         </p>
     </div>
     <aside class="hidden">
-        <a id="prevFileLink" class="nav" href="d_a44f0ac069e85531_test_users_validator_py.html"/>
+        <a id="prevFileLink" class="nav" href="d_a44f0ac069e85531_test_verifications_service_py.html"/>
         <a id="nextFileLink" class="nav" href="configure_logging_py.html"/>
         <button type="button" class="button_prev_file" data-shortcut="["/>
         <button type="button" class="button_next_file" data-shortcut="]"/>
