--- a/users-backend-coverage/index.html
+++ b/users-backend-coverage/index.html
@@ -11,7 +11,7 @@
 <header>
     <div class="content">
         <h1>Users Backend Code Coverage:
-            <span class="pc_cov">89%</span>
+            <span class="pc_cov">90%</span>
         </h1>
         <aside id="help_panel_wrapper">
             <input id="help_panel_state" type="checkbox">
@@ -45,7 +45,7 @@
         </form>
         <p class="text">
             <a class="nav" href="https://coverage.readthedocs.io/en/7.3.2">coverage.py v7.3.2</a>,
-            created at 2023-11-27 02:28 +0000
+            created at 2023-11-28 18:42 +0000
         </p>
     </div>
 </header>
@@ -154,10 +154,10 @@
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_f35dcf436292fe87_user_interests_repository_py.html">repositories/user_interests_repository.py</a></td>
-                <td>42</td>
-                <td>4</td>
+                <td>54</td>
+                <td>6</td>
                 <td>0</td>
-                <td class="right" data-ratio="38 42">90%</td>
+                <td class="right" data-ratio="48 54">89%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_f35dcf436292fe87_user_repository_py.html">repositories/user_repository.py</a></td>
@@ -196,10 +196,10 @@
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_63e5b5a4137cfa77_data_structs_py.html">service/data_structs.py</a></td>
-                <td>70</td>
+                <td>78</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="70 70">100%</td>
+                <td class="right" data-ratio="78 78">100%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_63e5b5a4137cfa77_datadog_publisher_py.html">service/datadog_publisher.py</a></td>
@@ -228,6 +228,13 @@
                 <td>7</td>
                 <td>0</td>
                 <td class="right" data-ratio="18 25">72%</td>
+            </tr>
+            <tr class="file">
+                <td class="name left"><a href="d_63e5b5a4137cfa77_recommendations_generator_py.html">service/recommendations_generator.py</a></td>
+                <td>18</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="18 18">100%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_63e5b5a4137cfa77_user_interests_service_py.html">service/user_interests_service.py</a></td>
@@ -328,6 +335,13 @@
                 <td class="right" data-ratio="38 39">97%</td>
             </tr>
             <tr class="file">
+                <td class="name left"><a href="d_a44f0ac069e85531_test_recommendations_generator_py.html">tests/test_recommendations_generator.py</a></td>
+                <td>76</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="76 76">100%</td>
+            </tr>
+            <tr class="file">
                 <td class="name left"><a href="d_a44f0ac069e85531_test_user_follow_repository_py.html">tests/test_user_follow_repository.py</a></td>
                 <td>54</td>
                 <td>1</td>
@@ -394,10 +408,10 @@
         <tfoot>
             <tr class="total">
                 <td class="name left">Total</td>
-                <td>1858</td>
-                <td>204</td>
+                <td>1972</td>
+                <td>206</td>
                 <td>0</td>
-                <td class="right" data-ratio="1654 1858">89%</td>
+                <td class="right" data-ratio="1766 1972">90%</td>
             </tr>
         </tfoot>
     </table>
@@ -409,7 +423,7 @@
     <div class="content">
         <p>
             <a class="nav" href="https://coverage.readthedocs.io/en/7.3.2">coverage.py v7.3.2</a>,
-            created at 2023-11-27 02:28 +0000
+            created at 2023-11-28 18:42 +0000
         </p>
     </div>
     <aside class="hidden">
